--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
                 </ul>
             </nav>
             <div class="col-small debug">
-                <button>Accedi</button>
+                <button class="small button">Accedi</button>
             </div>
         </div>
     </div>
 <!-- Seconda parte Header -->
         <section class="header2">
-            <div class="debug"> </div>       
+            <div class="debug">
+                <h1>Il tuo posto per parlare</h1> 
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
+            <button class="small button"> &#129059; Scarica per Mac</button> <button class="big button">Apri Discord nel tuo browser</button>
+            </div>       
         </section> 
 </header> 
 <!--  Fine Header-->
