--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link href="https://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- Prima parte Header -->
 <header>
     <div class="container"> 
-        <div class="row row1">
+        <div class="flex row1">
             <div class="col-small debug"> 
                 <img src="/img/logo.svg" alt="logo discord">
             </div>
@@ -25,13 +26,13 @@
                     <li>Assistenza</li>
                 </ul>
             </nav>
-            <div class="col-small debug">
+            <div class="col-small debug flex">
                 <button class="small button">Accedi</button>
             </div>
         </div>
     </div>
 <!-- Seconda parte Header -->
-        <section class="header2">
+        <section class="header2 flex">
             <div class="debug">
                 <h1>Il tuo posto per parlare</h1> 
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
@@ -44,7 +45,7 @@
   <main>
 <!-- Prima sezione -->
     <section class="container">
-        <div class="row row2">
+        <div class="flex row2">
             <div class="col-big debug"> </div>
             <div class="col-small debug"> </div>
         </div>
@@ -52,7 +53,7 @@
 <!-- Seconda Sezione -->
     <section class="gray">
         <div class="container">
-            <div class="row row3">
+            <div class="flex row3">
                 <div class="col-small debug"> </div>
                 <div class="col-big debug"> </div>
             </div>
@@ -60,7 +61,7 @@
     </section>
 <!-- Terza Sezione -->
     <section class="container">
-        <div class="row row2">
+        <div class="flex row2">
             <div class="col-big debug"> </div>
             <div class="col-small debug"> </div>
         </div>
@@ -74,10 +75,10 @@
 <footer>
 <!-- Prima Parte footer -->
     <section class="container debug black">
-        <div class="row row4 ">
+        <div class="flex row4">
             <div class="col-big1 debug"> </div> 
             <div class="col-big2">
-                    <div class="row row5">
+                    <div class="flex row5">
                         <div class="col-small"></div>
                         <div class="col-small"></div>
                         <div class="col-small"></div>
@@ -88,7 +89,7 @@
     </section>
     <hr>
    <section class="container ">
-        <div class="row row6">
+        <div class="flex row6">
             <div class="debug">Logo</div>
             <button class="debug">Button</button>
         </div>
