--- a/index.html
+++ b/index.html
@@ -46,24 +46,39 @@
 <!-- Prima sezione -->
     <section class="container">
         <div class="flex row2">
-            <div class="col-big debug"> </div>
-            <div class="col-small debug"> </div>
+            <div class="col-big debug"> 
+                <img src="/img/item1.svg" alt="">
+            </div>
+            <div class="col-small debug"> 
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici, in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+            </div>
         </div>
     </section>
 <!-- Seconda Sezione -->
     <section class="gray">
         <div class="container">
             <div class="flex row3">
-                <div class="col-small debug"> </div>
-                <div class="col-big debug"> </div>
+                <div class="col-small debug"> 
+                    <h2> Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+                </div>
+                <div class="col-big debug"> 
+                    <img src="/img/item2.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
 <!-- Terza Sezione -->
     <section class="container">
         <div class="flex row2">
-            <div class="col-big debug"> </div>
-            <div class="col-small debug"> </div>
+            <div class="col-big debug"> 
+                <img src="/img/item3.svg" alt="">
+            </div>
+            <div class="col-small debug"> 
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio ad una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+            </div>
         </div>
     </section>
 <!-- Quarta sezione -->
