--- a/index.html
+++ b/index.html
@@ -83,7 +83,15 @@
     </section>
 <!-- Quarta sezione -->
     <section class="gray green">
-        <div class="debug"> </div>
+        <h2>Tecnologia affidabile per tenersi in contatto</h2>
+        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming o riunitevi in una sessione di disegno con la condivisione schermo</p>
+        <div class="debug"> 
+            <img src="/img/item4-big.svg" alt="">
+        </div>
+        <h3>Pronto a iniziare la tua avventura?</h3>
+        <div class="flex">
+        <button class="button medium"> &#129059; Scarica per Mac </button>
+        </div>
     </section>
 </main>
 <!-- Inizio Footer -->
