--- a/index.html
+++ b/index.html
@@ -17,32 +17,33 @@
             <div class="col-small debug"> 
                 <img src="/img/logo.svg" alt="logo discord">
             </div>
-            <nav class="col-big debug">
-                <ul>
-                    <li>Scarica</li>
-                    <li>Perchè Discord</li>
-                    <li>Nitro</li>
-                    <li>Sicurezza</li>
-                    <li>Assistenza</li>
-                </ul>
-            </nav>
+                <nav class="col-big debug">
+                    <ul>
+                        <li class="nav">Scarica</li>
+                        <li class="nav">Perchè Discord</li>
+                        <li class="nav">Nitro</li>
+                        <li class="nav">Sicurezza</li>
+                        <li class="nav">Assistenza</li>
+                    </ul>
+                </nav>
             <div class="col-small debug flex">
                 <button class="small button">Accedi</button>
             </div>
         </div>
     </div>
 <!-- Seconda parte Header -->
-        <section class="header2 flex">
-            <div class="debug">
-                <h1>Il tuo posto per parlare</h1> 
-                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
-            <button class="small button"> &#129059; Scarica per Mac</button> <button class="big button">Apri Discord nel tuo browser</button>
-            </div>       
-        </section> 
+    <section class="header2 flex">
+        <div class="debug">
+            <h1>Il tuo posto per parlare</h1> 
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
+            <button class="small button"> &#129059; Scarica per Mac</button> 
+            <button class="big button">Apri Discord nel tuo browser</button>
+        </div>       
+    </section> 
 </header> 
 <!--  Fine Header-->
 <!-- Inizio Main -->
-  <main>
+<main>
 <!-- Prima sezione -->
     <section class="container">
         <div class="flex row2">
@@ -90,16 +91,20 @@
         </div>
         <h3>Pronto a iniziare la tua avventura?</h3>
         <div class="flex">
-        <button class="button medium"> &#129059; Scarica per Mac </button>
+            <button class="button medium"> &#129059; Scarica per Mac </button>
         </div>
     </section>
 </main>
 <!-- Inizio Footer -->
 <footer>
 <!-- Prima Parte footer -->
-    <section class="container debug black">
+    <section class="container debug">
         <div class="flex row4">
-            <div class="col-big1 debug"> </div> 
+            <div class="col-big1 debug"> 
+                <h3>Il tuo posto per parlare</h3>
+                <img src="/img/ita.png" alt="bandiera italiana" class="flag">
+                <span class="language"> Italiano </span>
+            </div> 
             <div class="col-big2">
                     <div class="flex row5">
                         <div class="col-small"></div>
