--- a/index.html
+++ b/index.html
@@ -101,25 +101,75 @@
     <section class="container debug">
         <div class="flex row4">
             <div class="col-big1 debug"> 
-                <h3>Il tuo posto per parlare</h3>
+                <h4>Il tuo posto per parlare</h4>
                 <img src="/img/ita.png" alt="bandiera italiana" class="flag">
-                <span class="language"> Italiano </span>
+                <span class="language"> Italiano </span> 
+                <i class="fa-solid fa-angle-down"></i>
+                <div class="icon"> 
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
             </div> 
             <div class="col-big2">
                     <div class="flex row5">
-                        <div class="col-small"></div>
-                        <div class="col-small"></div>
-                        <div class="col-small"></div>
-                        <div class="col-small"></div>
+                        <div class="col-small title">
+                            <ul>
+                                <li class="title list">Prodotto</li>
+                                <li class="list">Scarica</li>
+                                <li class="list">Perchè Discord</li>
+                                <li class="list">Nitro</li>
+                                <li class="list">Sicurezza</li>
+                                <li class="list">Assistenza</li>
+                            </ul>
+                        </div>
+                        <div class="col-small">
+                            <ul>
+                                <li class="title list">Compagnia</li>
+                                <li class="list">Chi siamo</li>
+                                <li class="list">Lavora con noi</li>
+                                <li class="list">Marchio</li>
+                                <li class="list">Redazione</li>
+                                <li class="list">Negozio</li>
+                            </ul>
+                        </div>
+                        <div class="col-small">
+                            <ul>
+                                <li class="title list">Risorse</li>
+                                <li class="list">Scarica</li>
+                                <li class="list">Perchè Discord</li>
+                                <li class="list">Nitro</li>
+                                <li class="list">Sicurezza</li>
+                                <li class="list">Assistenza</li>
+                                <li class="list">Scarica</li>
+                                <li class="list">Perchè Discord</li>
+                                <li class="list">Nitro</li>
+                                <li class="list">Sicurezza</li>
+                                <li class="list">Assistenza</li>
+                            </ul>
+                        </div>
+                        <div class="col-small">
+                            <ul>
+                                <li class="title list">Norme</li>
+                                <li class="list">Scarica</li>
+                                <li class="list">Perchè Discord</li>
+                                <li class="list">Nitro</li>
+                                <li class="list">Sicurezza</li>
+                                <li class="list">Assistenza</li>
+                            </ul>
+                        </div>
                     </div>  
-            </div>  
+            </div> 
         </div>
+        <hr> 
     </section>
-    <hr>
    <section class="container ">
         <div class="flex row6">
-            <div class="debug">Logo</div>
-            <button class="debug">Button</button>
+            <div class="debug">
+                <img src="/img/logo.svg" alt="logo discord">
+            </div>
+            <button class="debug button footer">Registrati</button>
         </div>
     </section>
 </footer>         
