--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    <section class="container ">
         <div class="flex row6">
             <div class="debug">
-                <img src="/img/logo.svg" alt="logo discord">
+                <img src="./img/logo.svg" alt="logo discord">
             </div>
             <button class="debug button footer">Registrati</button>
         </div>
